# yourbank/src/domain/entity/Account.ts
@@ -9,13 +9,13 @@ export default class Account {
 	name: string;
     email: string;
     zipCode: string;
-    street: String;
-    complement: String;
-    district: String;
-    state: String;
+    street: string;
+    complement: string;
+    district: string;
+    state: string;
 	private statement: Transaction[];
 
-	constructor (cpf: string, name: string, email: string, zipCode: string, street: String, complement: String, district: String, state: String, id?: string) {
+	constructor (cpf: string, name: string, email: string, zipCode: string, street: string, complement: string, district: string, state: string, id?: string) {
         this.id = id ?? uuidv4();
 		this.cpf = new Cpf(cpf).getValue();
         this.name = name;
